[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/fonts/arialbd.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/fonts/seguisb.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/Scripts/calculator.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 90
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 129
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 155
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.968627, 0.486275, 0.196078, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100
corner_detail = 20

[sub_resource type="DynamicFont" id=5]
size = 155
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 50
font_data = ExtResource( 1 )

[node name="Calculadora" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1080.0
margin_bottom = 1920.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -683.0
grow_vertical = 2
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Request" type="Control" parent="ScrollContainer/VBoxContainer"]

[node name="registro2" type="Label" parent="ScrollContainer/VBoxContainer/Request"]
margin_left = 615.0
margin_right = 1080.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resultado2" type="Label" parent="ScrollContainer/VBoxContainer/Request"]
margin_left = 615.0
margin_top = 106.0
margin_right = 1058.0
margin_bottom = 208.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_left = 50.0
margin_top = 790.0
margin_right = 1040.0
margin_bottom = 793.0
color = Color( 0.839216, 0.839216, 0.839216, 0.913725 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="content" type="GridContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -481.0
margin_top = -1120.0
margin_right = 481.0
margin_bottom = -140.0
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ac" type="Button" parent="CanvasLayer/content"]
margin_right = 230.0
margin_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.968627, 0.486275, 0.196078, 1 )
text = "C"
flat = true

[node name="del" type="Button" parent="CanvasLayer/content"]
margin_left = 250.0
margin_right = 485.0
margin_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.968627, 0.486275, 0.196078, 1 )
text = "DEL"
flat = true

[node name="exp" type="Button" parent="CanvasLayer/content"]
margin_left = 505.0
margin_right = 765.0
margin_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.968627, 0.486275, 0.196078, 1 )
text = "  %  "
flat = true

[node name="division" type="Button" parent="CanvasLayer/content"]
margin_left = 785.0
margin_right = 962.0
margin_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.968627, 0.486275, 0.196078, 1 )
text = "รท"
flat = true

[node name="7" type="Button" parent="CanvasLayer/content"]
margin_top = 200.0
margin_right = 230.0
margin_bottom = 380.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = " 7 "
flat = true

[node name="8" type="Button" parent="CanvasLayer/content"]
margin_left = 250.0
margin_top = 200.0
margin_right = 485.0
margin_bottom = 380.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "8"
flat = true

[node name="9" type="Button" parent="CanvasLayer/content"]
margin_left = 505.0
margin_top = 200.0
margin_right = 765.0
margin_bottom = 380.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "9"
flat = true

[node name="multiplicacion" type="Button" parent="CanvasLayer/content"]
margin_left = 785.0
margin_top = 200.0
margin_right = 962.0
margin_bottom = 380.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.968627, 0.486275, 0.196078, 1 )
text = "x"
flat = true

[node name="4" type="Button" parent="CanvasLayer/content"]
margin_top = 400.0
margin_right = 230.0
margin_bottom = 580.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "4"
flat = true

[node name="5" type="Button" parent="CanvasLayer/content"]
margin_left = 250.0
margin_top = 400.0
margin_right = 485.0
margin_bottom = 580.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "5"
flat = true

[node name="6" type="Button" parent="CanvasLayer/content"]
margin_left = 505.0
margin_top = 400.0
margin_right = 765.0
margin_bottom = 580.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "6"
flat = true

[node name="menos" type="Button" parent="CanvasLayer/content"]
margin_left = 785.0
margin_top = 400.0
margin_right = 962.0
margin_bottom = 580.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.968627, 0.486275, 0.196078, 1 )
text = "-"
flat = true

[node name="1" type="Button" parent="CanvasLayer/content"]
margin_top = 600.0
margin_right = 230.0
margin_bottom = 780.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"
flat = true

[node name="2" type="Button" parent="CanvasLayer/content"]
margin_left = 250.0
margin_top = 600.0
margin_right = 485.0
margin_bottom = 780.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "2"
flat = true

[node name="3" type="Button" parent="CanvasLayer/content"]
margin_left = 505.0
margin_top = 600.0
margin_right = 765.0
margin_bottom = 780.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "3"
flat = true

[node name="mas" type="Button" parent="CanvasLayer/content"]
margin_left = 785.0
margin_top = 600.0
margin_right = 962.0
margin_bottom = 780.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.968627, 0.486275, 0.196078, 1 )
text = "+"
flat = true

[node name="ans" type="Button" parent="CanvasLayer/content"]
margin_top = 800.0
margin_right = 230.0
margin_bottom = 980.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.968627, 0.486275, 0.196078, 1 )
text = "Ans"
flat = true

[node name="0" type="Button" parent="CanvasLayer/content"]
margin_left = 250.0
margin_top = 800.0
margin_right = 485.0
margin_bottom = 980.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
flat = true

[node name="punto" type="Button" parent="CanvasLayer/content"]
margin_left = 505.0
margin_top = 800.0
margin_right = 765.0
margin_bottom = 980.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "."
flat = true

[node name="igual" type="Button" parent="CanvasLayer/content"]
margin_left = 785.0
margin_top = 800.0
margin_right = 962.0
margin_bottom = 980.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = " = "

[node name="registro" type="Label" parent="."]
margin_left = 615.0
margin_right = 1080.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resultado" type="Label" parent="."]
margin_left = 615.0
margin_top = 106.0
margin_right = 1058.0
margin_bottom = 208.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 818.0
margin_bottom = 782.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "asd"
[connection signal="pressed" from="CanvasLayer/content/ac" to="." method="_on_ac_pressed"]
[connection signal="pressed" from="CanvasLayer/content/division" to="." method="_on_division_pressed"]
[connection signal="pressed" from="CanvasLayer/content/7" to="." method="_on_7_pressed"]
[connection signal="pressed" from="CanvasLayer/content/8" to="." method="_on_8_pressed"]
[connection signal="pressed" from="CanvasLayer/content/9" to="." method="_on_9_pressed"]
[connection signal="pressed" from="CanvasLayer/content/multiplicacion" to="." method="_on_multiplicacion_pressed"]
[connection signal="pressed" from="CanvasLayer/content/4" to="." method="_on_4_pressed"]
[connection signal="pressed" from="CanvasLayer/content/5" to="." method="_on_5_pressed"]
[connection signal="pressed" from="CanvasLayer/content/6" to="." method="_on_6_pressed"]
[connection signal="pressed" from="CanvasLayer/content/menos" to="." method="_on_menos_pressed"]
[connection signal="pressed" from="CanvasLayer/content/1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="CanvasLayer/content/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="CanvasLayer/content/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="CanvasLayer/content/mas" to="." method="_on_mas_pressed"]
[connection signal="pressed" from="CanvasLayer/content/0" to="." method="_on_0_pressed"]
[connection signal="pressed" from="CanvasLayer/content/punto" to="." method="_on_punto_pressed"]
[connection signal="pressed" from="CanvasLayer/content/igual" to="." method="_on_igual_pressed"]
